Updated OpenAPI docs
