# server/internal/dto/profile.go
@@ -1,0 +1,6 @@
+package dto
+
+type ProfileResponse struct {
+	User User
+}
+
