# server/internal/handlers/ping.go
@@ -12,7 +12,7 @@ import (
 // @Tags service
 // @Produce json
 // @Success 200 {object} api.Response{data=dto.PongResponse} "Server is running"
-// @Router /api/ping [get]
+// @Router /ping [get]
 func PingHandler(c *gin.Context) {
 	api.Success(c, dto.PongResponse{
 		Message: "pong",
